[package]
name = "webserver"
edition = "2021"

[dependencies]
http = "1"
http-body-util = "0.1"
hyper = { version = "1", default-features = false }
hyper-util = { version = "0.1", default-features = false, features = ["server-auto", "tokio"] }
tokio = { version = "1.0", features = ["macros", "net", "rt", "parking_lot"] }
env_logger = { version = "0.11" }

[target.'cfg(target_os = "hermit")'.dependencies]
hermit = { path = "../../hermit", default-features = false }

[features]
default = ["hermit/acpi", "hermit/dhcpv4", "hermit/fs", "hermit/pci", "hermit/pci-ids", "hermit/tcp"]
